--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,15 +44,15 @@
   color: #ffffff;
 }
 
-.button_small {
+.buttonSmall {
   padding: 5px;
 }
 
-.button_large {
+.buttonLarge {
   padding: 10px;
 }
 
-.search-form {
+.searchForm {
   padding: 10px 0 20px 0;
   display: flex;
   align-items: baseline;
